--- a/HomeBookApp/Views/Villa/Index.cshtml
+++ b/HomeBookApp/Views/Villa/Index.cshtml
@@ -2,15 +2,17 @@
 
 <div class="card border-0 p-4">
     <div class="card-header bg-success bg-gradient">
-        <div class="col-12 text-center">
-            <h1 class="text-white pt-3 pb-2">Villa List</h1>
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1 class="text-white pt-3 pb-2">Villa List</h1>
+            </div>
         </div>
     </div>
 
     <div class="card-body p-4">
          <div class="row pb-3">
                <div class="col-6 offset-6 text-end">
-                <a asp-controller="Villa" asp-action="" class="btn btn-secondary">
+                <a asp-controller="Villa" asp-action="Create" class="btn btn-secondary">
                     <i class="bi bi-plus-lg"></i> Create New Villa
                     </a>
                </div>
