--- a/HomeBookApp/Views/Villa/Update.cshtml
+++ b/HomeBookApp/Views/Villa/Update.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-success bg-gradient">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="text-white pt-3 pb-2">Create Villa</h1>
+                <h1 class="text-white pt-3 pb-2">Update Villa</h1>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
                 <div class="row pt-4">
                     <div class="col-6 col-md-3">
                         <button type="submit" class="btn btn-outline-success w-100">
-                            <i class="bi bi-check-circle"></i> Create
+                            <i class="bi bi-check-circle"></i> Update
                         </button>
                     </div>
 
