--- a/HomeBookApp/Views/Villa/Delete.cshtml
+++ b/HomeBookApp/Views/Villa/Delete.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-success bg-gradient">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="text-white pt-3 pb-2">Update Villa</h1>
+                <h1 class="text-white pt-3 pb-2">Delete Villa</h1>
             </div>
         </div>
     </div>
@@ -14,45 +14,39 @@
             <input asp-for="Id" hidden />
             <div>
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Name" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="Name" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="Name" for="floatingInput"></label>
-                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Description" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="Description" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="Description" for="floatingInput"></label>
-                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Price" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="Price" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="Price" for="floatingInput"></label>
-                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Sqft" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="Sqft" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="Sqft" for="floatingInput"></label>
-                    <span asp-validation-for="Sqft" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Occupancy" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="Occupancy" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="Occupancy" for="floatingInput"></label>
-                    <span asp-validation-for="Occupancy" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="ImageUrl" class="form-control" id="floatingInput" placeholder="">
+                    <input asp-for="ImageUrl" disabled class="form-control" id="floatingInput" placeholder="">
                     <label asp-for="ImageUrl" for="floatingInput"></label>
-                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
 
                 <div class="row pt-4">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-outline-success w-100">
-                            <i class="bi bi-check-circle"></i> Update
+                        <button type="submit" class="btn btn-outline-warning w-100">
+                            <i class="bi bi-trash3-fill"></i> Delete
                         </button>
                     </div>
 
