refactor: import domain entities in view imports

--- a/HomeBookApp/Views/Villa/Create.cshtml
+++ b/HomeBookApp/Views/Villa/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeBookApp.Domain.Entities.Villa
+﻿@model Villa
 
 <div class="card border-0 p-4">
     <div class="card-header bg-success bg-gradient">
