--- a/HomeBookApp/Views/_ViewImports.cshtml
+++ b/HomeBookApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using HomeBookApp
 @using HomeBookApp.Models
+@using HomeBookApp.Domain.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
