--- a/HomeBookApp/Views/_ViewImports.cshtml
+++ b/HomeBookApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using HomeBookApp
 @using HomeBookApp.Models
 @using HomeBookApp.Domain.Entities
+@using HomeBookApp.Web.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
