--- a/HomeBookApp/Views/Villa/Create.cshtml
+++ b/HomeBookApp/Views/Villa/Create.cshtml
@@ -10,42 +10,43 @@
     </div>
 
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form class="row" method="post" enctype="multipart/form-data">
             <div>
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Name" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Name" for="floatingInput"></label>
+                    <input asp-for="Name" class="form-control" placeholder="">
+                    <label asp-for="Name"></label>
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Description" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Description" for="floatingInput"></label>
+                    <input asp-for="Description" class="form-control" placeholder="">
+                    <label asp-for="Description"></label>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Price" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Price" for="floatingInput"></label>
+                    <input asp-for="Price" class="form-control" placeholder="">
+                    <label asp-for="Price"></label>
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Sqft" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Sqft" for="floatingInput"></label>
+                    <input asp-for="Sqft" class="form-control" placeholder="">
+                    <label asp-for="Sqft"></label>
                     <span asp-validation-for="Sqft" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="Occupancy" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Occupancy" for="floatingInput"></label>
+                    <input asp-for="Occupancy" class="form-control" placeholder="">
+                    <label asp-for="Occupancy"></label>
                     <span asp-validation-for="Occupancy" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3 col-12">
-                    <input asp-for="ImageUrl" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="ImageUrl" for="floatingInput"></label>
-                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                    <input asp-for="ImageUrl" hidden class="form-control">
+                    <input asp-for="Image" class="form-control">
+                    <label asp-for="ImageUrl"></label>
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
 
                 <div class="row pt-4">
