--- a/HomeBookApp/Views/Villa/Update.cshtml
+++ b/HomeBookApp/Views/Villa/Update.cshtml
@@ -10,59 +10,67 @@
     </div>
 
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Id" hidden />
-            <div>
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Name" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Name" for="floatingInput"></label>
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
 
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Description" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Description" for="floatingInput"></label>
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Price" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Price" for="floatingInput"></label>
-                    <span asp-validation-for="Price" class="text-danger"></span>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Sqft" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Sqft" for="floatingInput"></label>
-                    <span asp-validation-for="Sqft" class="text-danger"></span>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Occupancy" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Occupancy" for="floatingInput"></label>
-                    <span asp-validation-for="Occupancy" class="text-danger"></span>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="ImageUrl" class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="ImageUrl" for="floatingInput"></label>
-                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
-                </div>
-
-                <div class="row pt-4">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-outline-success w-100">
-                            <i class="bi bi-check-circle"></i> Update
-                        </button>
+            <div class="col-10">
+                <div>
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Name" class="form-control" placeholder="">
+                        <label asp-for="Name"></label>
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
-                    <div class="col-6 col-md-3">
-                        <a asp-controller="Villa" asp-action="Index" class="btn btn-outline-danger w-100">
-                            <i class="bi bi-x-circle"></i> Cancel
-                        </a>
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Description" class="form-control" placeholder="">
+                        <label asp-for="Description"></label>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Price" class="form-control" placeholder="">
+                        <label asp-for="Price"></label>
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Sqft" class="form-control" placeholder="">
+                        <label asp-for="Sqft"></label>
+                        <span asp-validation-for="Sqft" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Occupancy" class="form-control" placeholder="">
+                        <label asp-for="Occupancy"></label>
+                        <span asp-validation-for="Occupancy" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="ImageUrl" hidden class="form-control">
+                        <input asp-for="Image" class="form-control">
+                        <label asp-for="ImageUrl"></label>
+                        <span asp-validation-for="Image" class="text-danger"></span>
+                    </div>
+
+                    <div class="row pt-4">
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-outline-success w-100">
+                                <i class="bi bi-check-circle"></i> Update
+                            </button>
+                        </div>
+
+                        <div class="col-6 col-md-3">
+                            <a asp-controller="Villa" asp-action="Index" class="btn btn-outline-danger w-100">
+                                <i class="bi bi-x-circle"></i> Cancel
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="col-2">
+                <img src="@Model.ImageUrl" width="100%" style="border-radius: 5px; border: 1px solid #bbb9b9"/>
+            </div>
+
         </form>
     </div>
 </div>
