--- a/HomeBookApp/Views/Villa/Delete.cshtml
+++ b/HomeBookApp/Views/Villa/Delete.cshtml
@@ -12,50 +12,57 @@
     <div class="card-body p-4">
         <form method="post" class="row">
             <input asp-for="Id" hidden />
-            <div>
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Name" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Name" for="floatingInput"></label>
-                </div>
 
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Description" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Description" for="floatingInput"></label>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Price" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Price" for="floatingInput"></label>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Sqft" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Sqft" for="floatingInput"></label>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="Occupancy" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="Occupancy" for="floatingInput"></label>
-                </div>
-
-                <div class="form-floating mb-3 col-12">
-                    <input asp-for="ImageUrl" disabled class="form-control" id="floatingInput" placeholder="">
-                    <label asp-for="ImageUrl" for="floatingInput"></label>
-                </div>
-
-                <div class="row pt-4">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-outline-warning w-100">
-                            <i class="bi bi-trash3-fill"></i> Delete
-                        </button>
+            <div class="col-10">
+                <div>
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Name" disabled class="form-control" placeholder="">
+                        <label asp-for="Name"></label>
                     </div>
 
-                    <div class="col-6 col-md-3">
-                        <a asp-controller="Villa" asp-action="Index" class="btn btn-outline-danger w-100">
-                            <i class="bi bi-x-circle"></i> Cancel
-                        </a>
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Description" disabled class="form-control" placeholder="">
+                        <label asp-for="Description"></label>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Price" disabled class="form-control" placeholder="">
+                        <label asp-for="Price"></label>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Sqft" disabled class="form-control" placeholder="">
+                        <label asp-for="Sqft"></label>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="Occupancy" disabled class="form-control" placeholder="">
+                        <label asp-for="Occupancy"></label>
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
+                        <input asp-for="ImageUrl" disabled class="form-control" placeholder="">
+                        <label asp-for="ImageUrl"></label>
+                    </div>
+
+                    <div class="row pt-4">
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-outline-warning w-100">
+                                <i class="bi bi-trash3-fill"></i> Delete
+                            </button>
+                        </div>
+
+                        <div class="col-6 col-md-3">
+                            <a asp-controller="Villa" asp-action="Index" class="btn btn-outline-danger w-100">
+                                <i class="bi bi-x-circle"></i> Cancel
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-2">
+                <img src="@Model.ImageUrl" width="100%" style="border-radius: 5px; border: 1px solid #bbb9b9" />
             </div>
         </form>
     </div>
