--- a/HomeBookApp/Views/Amenity/Delete.cshtml
+++ b/HomeBookApp/Views/Amenity/Delete.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-success bg-gradient">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="text-white pt-3 pb-2">Update Amenity</h1>
+                <h1 class="text-white pt-3 pb-2">Delete Amenity</h1>
             </div>
         </div>
     </div>
